trigger main when scheduler completed

--- a/.github/workflows/on-main.yml
+++ b/.github/workflows/on-main.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - main
+  workflow_run:
+    workflows:
+      - sheduler
+    types:
+      - completed
 
 jobs:
   on-main:
